# docling-expander

./: Makefile  README.md  pyproject.toml
src/expander/: __init__.py  config.py  main.py
tmp/: example_document.docling.json  example_document.html
